minor move startups to same namespace

--- a/Src/Integration/SxcEdit01/Pages/Edit.cshtml
+++ b/Src/Integration/SxcEdit01/Pages/Edit.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@using ToSic.Eav.Apps.Sys.State
+@using ToSic.Eav.Data.Sys.Entities
 @using ToSic.Eav.Metadata
 @using ToSic.Lib.DI
 @using ToSic.Sxc.Services
