prepare to publish AllOfType, OneOfType etc. ientity extensions

--- a/Src/Integration/SxcEdit01/Pages/Edit.cshtml
+++ b/Src/Integration/SxcEdit01/Pages/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using ToSic.Eav.Apps.Sys.State
+@using ToSic.Eav.Data
 @using ToSic.Eav.Data.Sys.Entities
 @using ToSic.Eav.Metadata
 @using ToSic.Sxc.Services
